# SharedProject

ClientServerDemo/: CMakeLists.txt  main.cpp
ClientServerDemo/client/: IClient.h  TcpClient.h
ClientServerDemo/common/: Common.h  RequestBuilder.cpp  RequestBuilder.h
ClientServerDemo/schema/: request.proto
ClientServerDemo/schema_out/: response.pb.h
ClientServerDemo/server/: TcpServer.cpp
ClientServerUIDemo/: CMakeLists.txt  main.cpp
ClientServerUIDemo/client/: TcpClient.cpp
ClientServerUIDemo/common/: Common.h  ProtobufMessages.h
ClientServerUIDemo/schema/: response.proto
ClientServerUIDemo/schema_out/: request.pb.cc  request.pb.h  response.pb.cc
ClientServerUIDemo/server/: IServer.h  TcpServer.cpp  TcpServer.h
ClientServerUIDemo/ui/: ClientWindow.cpp  ClientWindow.h
ProtoBuff_SimpleDemo/: CMakeLists.txt  main.cpp
ProtoBuff_SimpleDemo/messages/: request.pb.cc  request.pb.h  response.pb.cc  response.pb.h
ProtoBuff_SimpleDemo/proto/: request.proto  response.proto
Utilities/: Base64.cpp  Base64.h  CMakeLists.txt  DateTimeUtilities.cpp  DateTimeUtilities.h  FileUtilities.cpp  FileUtilities.h  HexConverter.cpp  HexConverter.h  PerfUtilities.cpp  PerfUtilities.h  StringUtilities.cpp  StringUtilities.h  ThreadUtilities.cpp  ThreadUtilities.h  main.cpp
